--- a/main.css
+++ b/main.css
@@ -6,6 +6,8 @@ header { height:auto; background:#3f51b5; align-items:center; display:flex;  fle
 nav {display:flex;  flex-wrap: wrap; align-items:stretch; height:inherit;}
 nav a{ line-height:var(--header-height); text-decoration:none; font-family:"Trebuchet MS", Helvetica, sans-serif; font-weight:bold; font-size:13px; text-transform: uppercase; color:#fff; padding:0 5px 0 5px;}
 nav a:hover { color:#64ffda; background:#333; transition: all 1s ease; }
-article {margin: 0 auto 0 auto; padding:5px; max-width:600px; font-family:Arial, Helvetica, sans-serif;}
-article h1{font-family:"Courier New", Courier, monospace; font-size:200%; padding-bottom:10px; margin-bottom:20px; border-bottom:1px solid black;}
+article {margin: 0 auto 100px auto; padding:5px; max-width:600px; font-family:Arial, Helvetica, sans-serif;}
+article h1{font-family:"Courier New", Courier, monospace; font-size:200%; padding: 0 0 10px 5px; margin-bottom: 20px; border-bottom:1px solid black; border-left:1px solid black;}
 footer, footer a{ min-height:100px; color:#fff; margin-top:100px; padding:15px; background:#424242; text-align:center; font-family:"Trebuchet MS", Helvetica, sans-serif; font-weight:bold; text-transform: uppercase; text-decoration:none;}
+img, video{max-width:100%; margin:5px 0 5px 0;}
+pre{ background:#191919; color:#0f0; padding:5px 5px 5px 8px; white-space: pre-wrap;}
