--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 /*Fork this Template on Github: https://github.com/i5heu/15-lines-template/tree/master */
-:root {--header-height:50px;}
+:root {--header-height:3em;}
 html,body {margin:0; padding:0;}
-header { height:auto; background:#3f51b5; align-items:center; display:flex;  flex-wrap: wrap;}
-#logo { height:var(--header-height); line-height:var(--header-height); margin:0 15px 0 20px;  text-decoration:none;  font-size:150%; color:#fff; font-family:monospace; font-weight:bold;}
+header { height:var(--header-height);;  background:#3f51b5; align-items:center; display:flex;  flex-wrap: wrap;}
+#logo { display:flex; heightvar(--header-height);; line-height:var(--header-height); margin:0 15px 0 20px;  text-decoration:none;  font-size:1.5em; color:#fff; font-family:monospace; font-weight:bold;}
 nav {display:flex;  flex-wrap: wrap; align-items:stretch; height:inherit;}
 nav a{ line-height:var(--header-height); text-decoration:none; font-family:"Trebuchet MS", Helvetica, sans-serif; font-weight:bold; font-size:13px; text-transform: uppercase; color:#fff; padding:0 5px 0 5px;}
 nav a:hover { color:#64ffda; background:#333; transition: all 1s ease; }
